--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,18 @@
         <main.class>io.akikr.demopostgredbapp.DemoPostgreDbApp</main.class>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>1.17.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -55,11 +67,6 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-otel</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>tomcat-embed-el</artifactId>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <version>11.0.9</version>
         </dependency>
 
         <!--        <dependency>-->
@@ -100,15 +107,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.instancio</groupId>
-            <artifactId>instancio-junit</artifactId>
-            <version>2.9.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <version>1.21.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.instancio</groupId>
+            <artifactId>instancio-junit</artifactId>
+            <version>2.9.0</version>
             <scope>test</scope>
         </dependency>
 
