--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ management.endpoint.health.probes.enabled=true
 management.health.db.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env
-management.tracing.sampling.probability=1
+management.tracing.sampling.probability=1.0
+management.otlp.metrics.export.enabled=false
 
 ## Logging config
 logging.config=classpath:app-logback.xml
