Update: The structured logging format for console appender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,8 @@ management.otlp.metrics.export.enabled=false
 
 ## Logging config
 logging.config=classpath:app-logback.xml
-logging.structured.format.file=logstash
+#logging.structured.format.console=logstash
+#logging.structured.format.file=logstash
 # logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 # logging.level.io.akikr.demopostgredbapp.config.AppLoggingFilter=DEBUG
 # logging.file.name=app-log.json
