Update: The pom to add the plugin to generate SBOM file

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,26 @@
                     </container>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.cyclonedx</groupId>
+                <artifactId>cyclonedx-maven-plugin</artifactId>
+                <configuration>
+                    <verbose>true</verbose>
+                    <outputFormat>json</outputFormat>
+                    <includeTestScope>true</includeTestScope>
+                    <outputName>${project.artifactId}.cdx.sbom</outputName>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sbom</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>makeAggregateBom</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
