Add: The metrics and opentelemetry tracing configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,24 @@ management.endpoint.health.probes.enabled=true
 management.health.db.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env
-management.tracing.sampling.probability=1.0
+
+# OpenTelemetry Metrics config
+management.metrics.enable.all=true
+management.metrics.tags.application=${spring.application.name}
+
+# OTLP Metrics Exporter config
 management.otlp.metrics.export.enabled=false
+management.otlp.metrics.export.url=http://localhost:4317/v1/metrics
+management.otlp.metrics.export.step=10s
+
+# OpenTelemetry Tracing config
+management.tracing.sampling.probability=0
+management.opentelemetry.tracing.export.otlp.transport=http
+management.opentelemetry.tracing.export.otlp.endpoint=http://localhost:4317/v1/traces
+
+# OpenTelemetry Logging config
+management.logging.export.enabled=false
+management.opentelemetry.logging.export.otlp.endpoint=http://localhost:4317/v1/logs
 
 ## Logging config
 logging.config=classpath:app-logback.xml
