Update: The docker compose file for dev and prod env with LGTM stack for Observability

--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -1,6 +1,7 @@
 services:
   yugabyte-db:
     image: yugabytedb/yugabyte:2025.1.1.1-b1
+    container_name: yugabyte-db
     ports:
       - "7001:7000"         # Master UI
       - "9001:9000"         # Tserver UI
@@ -50,29 +51,6 @@ services:
 # To login into YSQL: docker exec -it yugabyte-db bash -c 'PGPASSWORD=secret /home/yugabyte/bin/ysqlsh -h $(hostname) -U my_user -d my_db'
 # To load schema via SQL scripts: docker exec -it yugabyte-db bash -c 'PGPASSWORD=secret /home/yugabyte/bin/ysqlsh -h $(hostname) -U my_user -d my_db -f /docker-entrypoint-initdb.d/*.sql'
 
-  app-native:
-    image: app/postgre-app-native:v0
-    build:
-      context: .
-      dockerfile: native.Dockerfile
-    environment:
-      DB_HOST: 'yugabyte-db'
-      DB_PORT: '5433'
-      DB_NAME: '${DB_NAME}'
-      DB_USER: '${DB_USER}'
-      DB_PASSWORD: '${DB_PASSWORD}'
-      APP_ARGS: '--spring.threads.virtual.enabled=true --spring.docker.compose.enabled=false --spring.profiles.active=yugabyte'
-    ports:
-        - "8090:8090"
-    deploy:
-      mode: replicated
-      replicas: 1
-    depends_on:
-      yugabyte-db:
-        condition: service_healthy
-    env_file:
-      - .env
-
   app-jre:
     image: app/postgre-app-jre:v1
     build:
@@ -84,18 +62,66 @@ services:
       DB_NAME: '${DB_NAME}'
       DB_USER: '${DB_USER}'
       DB_PASSWORD: '${DB_PASSWORD}'
-      JAVA_OPTS: '-Xmx300m'
-      APP_ARGS: '--spring.threads.virtual.enabled=true --spring.docker.compose.enabled=false --spring.profiles.active=yugabyte'
+      OTEL_SERVICE_NAME: demo-postgre-app
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://lgtm:4318
+      OTEL_PROFILING_ENABLED: "true"
+      OTEL_TRACES_EXPORTER: otlp
+      OTEL_METRICS_EXPORTER: otlp
+      OTEL_LOGS_EXPORTER: otlp
+      JAVA_OPTS: >-
+        -Xmx500m
+        -javaagent:/opt/grafana/grafana-opentelemetry-java.jar
+      APP_ARGS: >-
+        --spring.threads.virtual.enabled=true
+        --spring.docker.compose.enabled=false
+        --spring.profiles.active=yugabyte
+        --management.otlp.metrics.export.enabled=true
+        --management.tracing.sampling.probability=0.1
+        --management.otlp.metrics.export.url=http://lgtm:4318/v1/metrics 
+        --management.opentelemetry.tracing.export.otlp.endpoint=http://lgtm:4318/v1/traces
+        --management.logging.export.enabled=true
+        --management.opentelemetry.logging.export.otlp.endpoint=http://lgtm:4318/v1/logs
     ports:
-        - "8091:8090"
+        - "8090:8090"
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 300M
     depends_on:
       yugabyte-db:
         condition: service_healthy
+      lgtm:
+        condition: service_started
+    volumes:
+      - ./configs/grafana-opentelemetry-java.jar:/opt/grafana/grafana-opentelemetry-java.jar
+    env_file:
+      - .env
+
+  lgtm:
+    image: grafana/otel-lgtm:0.13.0
+    container_name: lgtm
+    ports:
+      - '3000:3000'   # Grafana UI
+      - '4317:4317'   # OTLP gRPC
+      - '4318:4318'   # OTLP HTTP
+      - '9090:9090'   # Prometheus UI
+      - '4040:4040'   # Loki Query UI
+    environment:
+      - 'GF_PATHS_DATA=/data/grafana'
+      - 'ENABLE_LOGS_ALL=true'
+    volumes:
+      - lgtm_data:/data/grafana
+      - lgtm_data:/data/prometheus
+      - lgtm_data:/data/loki
     env_file:
       - .env
 
 volumes:
   yugabyte_data:
+  lgtm_data:
