--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,6 +1,7 @@
 services:
   postgres-db:
     image: 'postgres:17.5-alpine'
+    container_name: postgres-db
     environment:
       - 'POSTGRES_DB=${DB_NAME}'
       - 'POSTGRES_USER=${DB_USER}'
