--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ## Server config
 server.port=8090
 server.servlet.context-path=/app
+# Server shutdown config: graceful or immediate
+server.shutdown=graceful
 
 ## Spring config
 spring.application.name=pdb-app
