--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -75,6 +75,7 @@ services:
         --spring.threads.virtual.enabled=true
         --spring.docker.compose.enabled=false
         --spring.profiles.active=yugabyte
+        --server.shutdown=immediate
         --management.otlp.metrics.export.enabled=true
         --management.tracing.sampling.probability=0.1
         --management.otlp.metrics.export.url=http://lgtm:4318/v1/metrics 
