Update: The config for app-native service

--- a/compose-lgtm.yml
+++ b/compose-lgtm.yml
@@ -85,8 +85,8 @@ services:
       context: .
       dockerfile: native.Dockerfile
     environment:
-      DB_HOST: 'yugabyte-db'
-      DB_PORT: '5433'
+      DB_HOST: 'postgres-db'
+      DB_PORT: '5432'
       DB_NAME: '${DB_NAME}'
       DB_USER: '${DB_USER}'
       DB_PASSWORD: '${DB_PASSWORD}'
@@ -94,12 +94,14 @@ services:
         --spring.threads.virtual.enabled=true
         --spring.docker.compose.enabled=false
         --spring.profiles.active=postgres
+        --server.shutdown=immediate
         --management.otlp.metrics.export.enabled=true
         --management.tracing.sampling.probability=0.1
         --management.otlp.metrics.export.url=http://lgtm:4318/v1/metrics 
         --management.opentelemetry.tracing.export.otlp.endpoint=http://lgtm:4318/v1/traces
         --management.logging.export.enabled=true
         --management.opentelemetry.logging.export.otlp.endpoint=http://lgtm:4318/v1/logs
+        --app.logging.filter.include-response-body=false
     ports:
       - "8090:8090"
     deploy:
