--- a/compose-lgtm.yml
+++ b/compose-lgtm.yml
@@ -52,7 +52,7 @@ services:
       APP_ARGS: >-
         --spring.threads.virtual.enabled=true
         --spring.docker.compose.enabled=false
-        --spring.profiles.active=postgres
+        --spring.profiles.active=postgres,prod
         --server.shutdown=immediate
         --management.otlp.metrics.export.enabled=true
         --management.tracing.sampling.probability=0.1
@@ -93,7 +93,7 @@ services:
       APP_ARGS: >-
         --spring.threads.virtual.enabled=true
         --spring.docker.compose.enabled=false
-        --spring.profiles.active=postgres
+        --spring.profiles.active=postgres,prod
         --server.shutdown=immediate
         --management.otlp.metrics.export.enabled=true
         --management.tracing.sampling.probability=0.1
