--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
                             <goal>build-info</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>process-aot</id>
+                        <goals>
+                            <goal>process-aot</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
