Add: The spring lazy initialization config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.shutdown=graceful
 ## Spring config
 spring.application.name=pdb-app
 spring.threads.virtual.enabled=true
+spring.main.lazy-initialization=true
+
 # spring docker-compose config
 spring.docker.compose.enabled=true
 spring.docker.compose.lifecycle-management=start-and-stop
